--- a/client/src/app/components/brands-table/brands-table.component.html
+++ b/client/src/app/components/brands-table/brands-table.component.html
@@ -43,11 +43,6 @@
 			<mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
 		</ng-container>
 
-		<!-- <ng-container matColumnDef="quantity">
-			<mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
-			<mat-cell *matCellDef="let element"> {{element.quantity}} </mat-cell>
-		</ng-container> -->
-
 		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 		<mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onCheckboxChange(row)" class="pointer"></mat-row>
 	</mat-table>
@@ -75,26 +70,16 @@
 						<th>Front mark</th>
 						<th>Quantity</th>
 						<th>MSRP</th>
-						<th>Jrprice</th>
+						<th>Price</th>
 						<th>5 pack price</th>
-						<th>Sale price</th>
-						<th>Future price</th>
-						<!-- <th>Wholesale price</th> -->
-						<!-- <th>Seriouscigars price</th>
-						<th>Cigars price</th> -->
 					</tr>
 					<tr *ngFor="let item of row.items">
 						<td>{{item.code}}</td>
 						<td>{{item.name}} • {{item.shade}}, {{item.length}} x {{item.ring}}</td> 
 						<td>{{item.quantity}}</td>
 						<td><span *ngIf="item.msrp != -1">${{item.msrp.toFixed(2)}}</span></td>
-						<td><span *ngIf="item.jr_price != -1">${{item.jr_price.toFixed(2)}}</span></td> 
+						<td><span *ngIf="item.price != -1">${{item.price.toFixed(2)}}</span></td> 
 						<td><span *ngIf="item.five_pack_price != -1">${{item.five_pack_price.toFixed(2)}}</span></td>
-						<!-- <td>${{item.sale_price.toFixed(2)}}</td> -->
-						<td>${{item.prices.wholesale_price.toFixed(2)}}</td>
-						<td>${{item.future_price.toFixed(2)}}</td>
-						<!-- <td>${{item.prices.seriouscigars_price}}</td>
-						<td>${{item.prices.cigars_price}}</td> -->
 					</tr>
 				</table>
 			</div>
