Price Box Enhancements

--- a/client/src/app/components/brands-table/brands-table.component.css
+++ b/client/src/app/components/brands-table/brands-table.component.css
@@ -110,6 +110,14 @@ th, td {
 	padding: 5px 10px;
 	/* text-align: center; */
 }
+
+td mat-checkbox {
+	/* display: block !important; */
+}
+
+.hidden {
+	display: none;
+}
 /* table, th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
