Task: Filter by 5 pack or 10 pack

--- a/client/src/app/components/brands-table/brands-table.component.css
+++ b/client/src/app/components/brands-table/brands-table.component.css
@@ -14,6 +14,15 @@
 	margin: 7px;
 }
 
+.pack-filter {
+	display: inline-block;
+	width: 300px;
+	position: relative;
+	top: 9px;
+	text-align: right;
+	padding: 0 20px;
+}
+
 .mat-table {
 	overflow-y: auto;
 	overflow-x: hidden;
