--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -128,7 +128,7 @@ header {
 .center-wrapper {
 	display: flex;
 	flex-direction: column;
-	width: 100%;
+    width: calc(100vw - 221px);
 	height: 100%;
 	background-color: #f7f9fb;
 }
