--- a/client/src/app/components/filter/filter.component.css
+++ b/client/src/app/components/filter/filter.component.css
@@ -3,9 +3,13 @@
     margin: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 :host::ng-deep.k-grid .k-grid-container {
-    max-height: calc(100vh - 266px);
+    height: calc(100vh - 228px);
+}
+
+:host::ng-deep.k-filter-row td, .k-filter-row th{
+    padding: 3px;
 }
