JRC-21 - change tab text

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,8 +22,8 @@
 				<span>SKU</span>
 			</div>
 
-			<div class="user filter" [ngClass]="{'activated': router.isActive('filter', false)}" [routerLink]="['/filter']">
-				<span>Filter</span>
+			<div class="user filter" [ngClass]="{'activated': router.isActive('filter', false)}" [routerLink]="['/item-picker']">
+				<span>Item Picker</span>
 			</div>
 
 			<!-- <div class="menu">
