--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,7 +22,7 @@
 				<span>SKU</span>
 			</div>
 
-			<div class="user filter" [ngClass]="{'activated': router.isActive('filter', false)}" [routerLink]="['/item-picker']">
+			<div class="user filter" [ngClass]="{'activated': router.isActive('item-picker', false)}" [routerLink]="['/item-picker']">
 				<span>Item Picker</span>
 			</div>
 
