--- a/client/src/app/components/filter/filter.component.css
+++ b/client/src/app/components/filter/filter.component.css
@@ -10,6 +10,14 @@
     height: calc(100vh - 228px);
 }
 
-:host::ng-deep.k-filter-row td, .k-filter-row th{
+:host::ng-deep.k-filter-row td, .k-filter-row th {
     padding: 3px;
+}
+
+kendo-grid-filter-menu > a {
+    background: transparent !important;
+    color: #fff !important;
+}
+kendo-grid-filter-menu > a.k-state-active {
+    color: #ff6358 !important;
 }
