--- a/client/src/app/components/filter/filter.component.css
+++ b/client/src/app/components/filter/filter.component.css
@@ -6,12 +6,12 @@
     justify-content: flex-end;
 }
 
-:host::ng-deep.k-grid .k-grid-container {
-    height: calc(100vh - 228px);
+.k-grid .k-grid-container {
+    height: calc(100vh - 228px) !important;
 }
 
-:host::ng-deep.k-filter-row td, .k-filter-row th {
-    padding: 3px;
+.k-filter-row td, .k-filter-row th {
+    padding: 3px !important;
 }
 
 kendo-grid-filter-menu > a {
@@ -20,4 +20,16 @@ kendo-grid-filter-menu > a {
 }
 kendo-grid-filter-menu > a.k-state-active {
     color: #ff6358 !important;
+}
+kendo-grid-filter-menu-container .k-filter-menu-container {
+    padding: 0px !important;
+    padding-bottom: 0.5em !important;
+}
+kendo-grid-filter-menu-container multicheck-filter ul {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+kendo-pager {
+    background-color: rgb(69, 106, 118) !important;
+    color: rgb(255, 255, 255) !important;
 }
