--- a/client/src/app/components/filter_new/filter.component.html
+++ b/client/src/app/components/filter_new/filter.component.html
@@ -7,6 +7,7 @@
 
 <div class="wrapper" *ngIf="!loading">
     <kendo-grid 
+        class="item-picker-grid-new"
         [data]="gridData" 
         [pageSize]="state.take" 
         [skip]="state.skip" 
