new grid link comented

--- a/client/src/app/components/filter_new/filter.component.css
+++ b/client/src/app/components/filter_new/filter.component.css
@@ -33,6 +33,6 @@
     background-color: rgb(69, 106, 118) !important;
     color: rgb(255, 255, 255) !important;
 }
-.k-pager-nav:hover {
+.item-picker-grid-new .k-pager-nav:hover {
     color: #222;
 }
