--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -24,9 +24,9 @@
 			<div class="user filter" [ngClass]="{'activated': router.isActive('item-picker', false)}" [routerLink]="['/item-picker']">
 				<span>Item Picker</span>
 			</div>
-			<div class="user filter" [ngClass]="{'activated': router.isActive('item-picker_new', false)}" [routerLink]="['/item-picker_new']">
+			<!-- <div class="user filter" [ngClass]="{'activated': router.isActive('item-picker_new', false)}" [routerLink]="['/item-picker_new']">
 				<span>Item Picker New</span>
-			</div>
+			</div> -->
 
 			<!-- <div class="menu">
 				<button mat-raised-button  (click)="home()">Home</button>
