--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -128,9 +128,12 @@ header {
 .center-wrapper {
 	display: flex;
 	flex-direction: column;
-    width: calc(100vw - 221px);
+    width: 100%;
 	height: 100%;
 	background-color: #f7f9fb;
+}
+.loggedIn {
+	width: calc(100vw - 221px);
 }
 
 
