santaclara cigars support added

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -30,6 +30,9 @@
 			<div class="user filter" [ngClass]="{'activated': router.isActive('item-picker-jr-cirags', false)}" [routerLink]="['/item-picker-jr-cirags']">
 				<span style="text-align: center">Item Picker <br> JR cigars</span>
 			</div>
+			<div class="user filter" [ngClass]="{'activated': router.isActive('item-picker-santaclara-cirags', false)}" [routerLink]="['/item-picker-santaclara-cirags']">
+				<span style="text-align: center">Item Picker <br> Santaclaracigars</span>
+			</div>
 			<!-- <div class="user filter" [ngClass]="{'activated': router.isActive('item-picker_new', false)}" [routerLink]="['/item-picker_new']">
 				<span>Item Picker New</span>
 			</div> -->
